fixed data value issue - when in doubt stackoverflow

--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -24,7 +24,6 @@ h3 {
   border: 0.1px solid black;
   border-radius: 1%;
   width: 30%;
-  height: auto;
   color: black;
   text-align: center;
   margin: 10px auto;
